--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <title>Welcome!</title>
 </head>
 <body>
 
